fix_upload_image

--- a/BlindBoxShop.Application/Pages/ImagePage/UploadImage.razor
+++ b/BlindBoxShop.Application/Pages/ImagePage/UploadImage.razor
@@ -31,7 +31,7 @@
     
     protected override async Task OnInitializedAsync()
     {
-        blindBoxIdString = await LocalStorage.GetItemAsync<string>("BlindBoxId");
+        //blindBoxIdString = await LocalStorage.GetItemAsync<string>("BlindBoxId");
     }
 
     private async Task HandleFileSelected(InputFileChangeEventArgs e)
